<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.alberthneerans.practica2.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/formulario"
        android:gravity="center"
        />
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/loggin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/eUsuario"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/contraseña"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eContrasena"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/rcontraseña"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/erContrasena"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/correoe"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eCorreo"
            android:inputType="textEmailAddress"/>

    </LinearLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/rMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:onClick="showDatePickerDialog" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/lugar"/>
        <Spinner
            android:id="@+id/lNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>

    <CheckBox android:id="@+id/chcine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cine"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chmusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musica"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chfutbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futbol"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chvideojuegos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videojuegos"
        android:onClick="onCheckboxClicked"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:onClick="onButtonClicked"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tRespuesta"
        android:textSize="10sp"/>
</LinearLayout>
